--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "log-to-file": "^2.0.2",
     "nuxt": "^2.0.0",
-    "vue-carousel-3d": "^0.2.0"
+    "vue-carousel-3d": "^0.2.0",
+    "vuetify-toast-snackbar": "^0.6.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
